<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.ljtfreitas</groupId>
	<artifactId>java-restify-group</artifactId>
	<version>3.0.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<name>java-restify-group</name>
	<description>Java Restify Maven Group (Parent)</description>
	<url>https://github.com/ljtfreitas/java-restify</url>

	<developers>
		<developer>
			<name>Tiago de Freitas Lima</name>
			<email>ljtfreitas@gmail.com</email>
		</developer>
	</developers>

	<modules>
		<module>java-restify</module>
		<module>java-restify-spi</module>
		<module>java-restify-reflection</module>
		<module>java-restify-contract</module>
		<module>java-restify-call-handler</module>

		<module>java-restify-http-client</module>
		<module>java-restify-http-client-apache-httpclient</module>
		<module>java-restify-http-client-okhttp</module>
		<module>java-restify-http-client-netty</module>
		<module>java-restify-http-client-jersey</module>
		<module>java-restify-http-client-jersey-rxjava</module>
		<module>java-restify-http-client-jersey-rxjava2</module>
		<module>java-restify-http-client-grizzly</module>
		<module>java-restify-http-client-vertx</module>

		<module>java-restify-retry</module>
		<module>java-restify-guava</module>
		<module>java-restify-rxjava</module>
		<module>java-restify-rxjava2</module>
		<module>java-restify-jsoup</module>
		<module>java-restify-reactor</module>
		<module>java-restify-reactor-hystrix</module>
		<module>java-restify-vavr</module>

		<module>java-restify-http-message</module>
		<module>java-restify-wildcard-converter</module>
		<module>java-restify-text-converter</module>
		<module>java-restify-form-encoded-multipart-converter</module>
		<module>java-restify-json-jackson-converter</module>
		<module>java-restify-json-gson-converter</module>
		<module>java-restify-json-jsonp-converter</module>
		<module>java-restify-json-jsonb-converter</module>
		<module>java-restify-octet-converter</module>
		<module>java-restify-xml-jaxb-converter</module>

		<module>java-restify-spring</module>
		<module>java-restify-spring-autoconfigure</module>
		<module>java-restify-spring-starter</module>
		<module>java-restify-spring-reactive</module>

		<module>java-restify-circuit-breaker</module>

		<module>java-restify-netflix-hystrix</module>
		<module>java-restify-netflix-ribbon</module>
		<module>java-restify-netflix-service-discovery</module>
		<module>java-restify-netflix-zookeeper-service-discovery</module>
		<module>java-restify-netflix-kubernetes-service-discovery</module>
		<module>java-restify-netflix-spring-autoconfigure</module>
		<module>java-restify-netflix-spring-starter</module>

		<module>java-restify-cdi</module>
		<module>java-restify-jaxrs-contract</module>

		<module>java-restify-hateoas</module>

		<module>java-restify-oauth2-authentication</module>
		<module>java-restify-oauth2-access-token-cache-jcache</module>
		<module>java-restify-oauth2-access-token-cache-caffeine</module>

		<module>java-restify-util</module>
		<module>java-restify-util-async</module>
	</modules>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mock-server</groupId>
			<artifactId>mockserver-netty</artifactId>
			<version>3.10.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>7.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<outputDirectory>${project.build.directory}/modules</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.7</version>
        	</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<excludeTransitive>false</excludeTransitive>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
            			<goals>
                			<goal>copy-dependencies</goal>
            			</goals>
            			<configuration>
                			<outputDirectory>${project.build.directory}/modules</outputDirectory>
                			<includeScope>runtime</includeScope>
            			</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.21.0</version>
						<configuration>
							<argLine>-Xms1024m -Xmx3g</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>source</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.0.4</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.0.4</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.3</version>
						<configuration>
							<stylesheet>maven</stylesheet>
							<stylesheetfile>${project.parent.basedir}/javadoc/stylesheet.css</stylesheetfile>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.7</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<useReleaseProfile>false</useReleaseProfile>
							<releaseProfiles>release</releaseProfiles>
							<goals>deploy</goals>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<scm>
		<connection>scm:git:git@github.com:ljtfreitas/java-restify.git</connection>
		<developerConnection>scm:git:git@github.com:ljtfreitas/java-restify.git</developerConnection>
		<url>https://github.com/ljtfreitas/java-restify</url>
	  <tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>Github Issues</system>
		<url>https://github.com/ljtfreitas/java-restify/issues</url>
	</issueManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
		</license>
	</licenses>
</project>
